####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = antlr des xml 

EXTRA_DIST = base.h chanserv.h commserv.h confbase.h convert.h cryptstream.h datetime.h dccengine.h fileconf.h filesys.h ircsocket.h language.h lockable.h logfile.h magick.h memoserv.h mstream.h mstring.h nickserv.h operserv.h pch.h server.h servmsg.h textfile.h trace.h utils.h variant.h version.h mconfig.h 

####### kdevelop will overwrite this part!!! (end)############
