####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = des xml 

EXTRA_DIST = base.h chanserv.h commserv.h convert.h datetime.h dccengine.h filesys.h ircsocket.h language.h lockable.h logfile.h magick.h mconfig.h memoserv.h mstring.h nickserv.h operserv.h pch.h server.h servmsg.h trace.h utils.h variant.h version.h

####### kdevelop will overwrite this part!!! (end)############

distclean-hdr:
	-cp -f version.h-release version.h
	-cp -f config.h.win config.h
	-cp -f crypt.h.win crypt.h

