####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = crypt xml 

EXTRA_DIST = base.h chanserv.h commserv.h convert_magick.h convert_hybserv.h convert_esper.h datetime.h dccengine.h filesys.h ircsocket.h language.h lockable.h logfile.h magick.h memoserv.h mstring.h nickserv.h operserv.h pch.h server.h servmsg.h stages.h trace.h utils.h variant.h mconfig.h mexceptions.h version.h-release config.h.win 

####### kdevelop will overwrite this part!!! (end)############

distclean-hdr:
	-cp -f version.h-release version.h
	-cp -f config.h.win config.h
