####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = asciitab.h codepage.h filemap.h hashtable.h iasciitab.h latin1tab.h nametab.h sxp.h sxp_data.h utf8tab.h xmldef.h xmlfile.h xmlparse.h xmlrole.h xmltchar.h xmltok.h xmltok_impl.h 

####### kdevelop will overwrite this part!!! (end)############
