####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libconvert.a
libconvert_a_SOURCES = auspice.cpp bolivia.cpp cygnus.cpp epona.cpp hybserv.cpp interface.cpp ircservices.cpp magick.cpp ptlink.cpp sirv.cpp trircd.cpp wrecked.cpp

AM_CPPFLAGS = -Wno-unused
CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(AM_CPPFLAGS) $(CXXFLAGS) $(AM_CXXFLAGS)
COMPILE = $(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(AM_CPPFLAGS) $(CFLAGS) $(AM_CFLAGS)

EXTRA_DIST = auspice.cpp bolivia.cpp cygnus.cpp epona.cpp hybserv.cpp interface.cpp ircservices.cpp magick.cpp ptlink.cpp sirv.cpp trircd.cpp wrecked.cpp

####### kdevelop will overwrite this part!!! (end)############
