####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libcrypt.a
libcrypt_a_SOURCES = bf_enc.c bf_skey.c md5_dgst.c

AM_CPPFLAGS = -Wunused
CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(AM_CPPFLAGS) $(CXXFLAGS) $(AM_CXXFLAGS)
COMPILE = $(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(AM_CPPFLAGS) $(CFLAGS) $(AM_CFLAGS)

EXTRA_DIST = bf_end.c bf_skey.c md5_dgst.c

####### kdevelop will overwrite this part!!! (end)############
