####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libxml.a

libxml_a_SOURCES = xmltok_ns.c xmltok_impl.c xmltok.c xmlrole.c xmlparse.c hashtable.c gennmtab.c dllmain.c 


EXTRA_DIST = dllmain.c gennmtab.c hashtable.c xmlparse.c xmlrole.c xmltok.c xmltok_impl.c xmltok_ns.c 

####### kdevelop will overwrite this part!!! (end)############
INCLUDES = -I$(top_srcdir)/include
noinst_LIBRARIES = libxml.a
libxml_a_SOURCES = \
sxp.cpp        xmlparse.c     xmltok.c       hashtable.c    xmlrole.c
