####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libxml.a

libxml_a_SOURCES = xmltok.c xmlrole.c xmlparse.c hashtable.c sxp.cpp


EXTRA_DIST = sxp.cpp dllmain.c gennmtab.c hashtable.c xmlparse.c xmlrole.c xmltok.c xmltok_impl.c xmltok_ns.c 

####### kdevelop will overwrite this part!!! (end)############
