####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libxml.a
libxml_a_SOURCES = sxp.cpp xmltok.c xmlrole.c xmlparse.c

AM_CPPFLAGS = -Wno-unused
CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(AM_CPPFLAGS) $(CXXFLAGS) $(AM_CXXFLAGS)
COMPILE = $(CC) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(AM_CPPFLAGS) $(CFLAGS) $(AM_CFLAGS)

EXTRA_DIST = xmlparse.c xmlrole.c xmltok.c sxp.cpp 

####### kdevelop will overwrite this part!!! (end)############
